# HarperTV

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
HarperTV/: CMakeLists.txt  harpertv.qrc
HarperTV/src/: HarperTV.rc  decodethread.cpp  decodethread.h  harpertv.cpp  harpertv.h  main.cpp  mediainfo.cpp  mediainfo.h  playwidget.cpp  playwidget.h  pub.h  stdafx.h
HarperTV/src/decoder/: ffmpeg.cpp  ffmpeg.h  streamparameters.h
HarperTV/src/renderer/: audiorenderthread.cpp  audiorenderthread.h  sdlaud.cpp  sdlaud.h  sdlvid.cpp  sdlvid.h  videorenderthread.cpp  videorenderthread.h
